assets/css/style.css
/* ... */
.carousel-heading-text {
    font-size: 5vmin;
}

.carousel-hr {
    border: 1px solid #A58961;
    margin: 0 auto;
    position: relative;
    bottom: -1em;
    width: 20%;
}

/*---- Code taken from https://flickity.metafizzy.co/ for Popular Destinations carousel ----*/

.carousel {
    background: #F5EBE0;
    box-sizing: border-box;
    margin-top: 5em;
}

.carousel-cell {
    width: 35%;
    margin-right: 3em;
}

.carousel-cell-image {
    min-width: 20%;
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
    display: block;
}

.carousel-image-title {
    color: #0C0409;
    font-size: 4vmin;
    padding-top: 0.5em;
}

/*---- Carousel Title underline hover effect code taken from https://codepen.io/colloque/pen/bDgmx ----*/

.carousel-image-title:after {
    content: '';
    position: absolute;
    left: 25%;
    display: inline-block;
    height: 1em;
    width: 50%;
    border-bottom: 1px solid #A58961;
    margin-top: 10px;
    opacity: 0;
	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
	transition: opacity 0.35s, transform 0.35s;
	-webkit-transform: scale(0,1);
	transform: scale(0,1);
}

.carousel-image-title:hover:after {
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
}

.carousel-cell > a {
    text-decoration: none;
}

/*---- Carousel hover effect code taken from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_opacity ----*/

.carousel-cell-image {
    opacity: 1;
    transition: .5s ease;
    backface-visibility: hidden;
}

.carousel-hover-content {
    transition: .5s ease;
    opacity: 0;
    text-align: start;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.carousel-cell:hover .carousel-cell-image {
    opacity: 0.3;
}

.carousel-cell:hover .carousel-hover-content {
    opacity: 1;
}

.carousel-image-text {
    background-color: #A58961;
    font-family: "Montserrat", sans-serif;
    letter-spacing: 1px;
    line-height: 1.3em;
    color: white;
    font-size: 2vmin;
    padding: 1em 2em;
}

/*---- North Island Hero Image ----*/

#north-nav-wrapper {
    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url("../images/north-hero-image.jpg") no-repeat center;
    background-size: cover;
    height: 100vh;
    position: relative;
}

/*---- Flights ----*/

.flights-wrapper {
    height: 50em;
    background-color: #A58961;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; /*Box shadow taken from https://getcssscan.com/css-box-shadow-examples */
    text-align: center;
}

#flights-header {
    font-family: "Bodoni Moda", sans-serif;
    margin: 1.5em 0 .5em 0;
    letter-spacing: 1px;
    color: #0C0409;
    font-size: 5vmin;
}

#flights-catchline {
    font-size: 3vmin;
    letter-spacing: 1px;
    color: #0C0409;
    margin-bottom: 1.5em;
}

.flights-button {
    padding: 0.5em 2.5em;
    font-size: 2.5vmin;
    letter-spacing: 1px;
    border: 1px solid #0C0409;
    border-radius: 2px;
    background-color: #F5EBE0;
}

/*---- Destinations ----*/
.destinations-wrapper {
    text-align: center;
    border: 2px solid #A58961;
    border-radius: 2px;
    margin-top: 8rem;
    height: auto;
    box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px; /*Code taken from https://getcssscan.com/css-box-shadow-examples*/
}

.destinations-heading {
    font-family: "Bodoni Moda", sans-serif;
    letter-spacing: 1px;
    color: #0C0409;
    font-size: 5vmin;
    padding-top: 1em;
    margin-bottom: 0.5em;
}

.destinations-catchline {
    font-size: 3vmin;
    letter-spacing: 1px;
    color: #0C0409;
    margin-bottom: 2em;
}

.destinations-content-wrapper {
    background-color: #F5EBE0;
    font-size: 2vmin;
    text-align: start;
}

.destinations-btn {
    padding: 1em 2em 0.5em;
    margin-bottom: 1em;
    margin-left: 1em;
    font-size: 2vmin;
    letter-spacing: 1px;
    border: 1px solid #A58961;
    border-radius: 2px;
    background-color: #A58961;
    width: 13rem;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; /*---- Code taken from https://getcssscan.com/css-box-shadow-examples ----*/
}

.destinations-text-wrapper {
    text-align: start;
    width: 13rem;
    letter-spacing: 1px;
    margin-left: 1.5em;
    margin-bottom: 1.7em;
}

.destinations-text-hr {
    border: 1px solid #A58961;
    width: 12rem;
}

.destinations-img-wrapper {
    width: 40rem;
    text-align: center;
}

.destinations-image {
    width: 100%;
    height: auto;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; /*---- Code taken from https://getcssscan.com/css-box-shadow-examples ----*/
    border-radius: 2px;
}

.explore-mre-btn {
    padding: 1em 2em;
    margin-top: 1.5em;
    font-size: 2vmin;
    letter-spacing: 1px;
    border: 2px solid #A58961;
    border-radius: 2px;
    background-color: #F5EBE0;
    width: 13rem;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; /*---- Code taken from https://getcssscan.com/css-box-shadow-examples ----*/
}

.explore-mre-btn-lg {
    padding: 1em;
    margin-top: 1.5em;
    font-size: 2vmin;
    letter-spacing: 1px;
    border: 2px solid #A58961;
    border-radius: 2px;
    background-color: #F5EBE0;
    width: 15rem;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; /*---- Code taken from https://getcssscan.com/css-box-shadow-examples ----*/
}

/*---- Destinations image positioning ----*/

#dest-img-well {
    position: absolute;
    left: 25em;
    top: 0;
}

#dest-img-mart {
    position: absolute;
    left: 25em;
    top: 4.5em;
}

#dest-img-taupo {
    position: absolute;
    left: 25em;
    top: 8.5em;
}

#dest-img-roto {
    position: absolute;
    left: 25em;
    top: 13em;
}

#dest-img-coro {
    position: absolute;
    left: 25em;
    top: 17em;
}

#dest-img-maung {
    position: absolute;
    left: 25em;
    top: 21em;
}

#dest-img-nap {
    position: absolute;
    left: 25em;
    top: 25em;
}
/* ... */

